2009-06-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/brk-maximal.c (brk_maximal_do_impl): Add break pos at
	string end and let it enter the contest, instead of backing it out by
	moving back str_pos as done in previous commit. That commit just
	missed the point. Doing the right thing also guarantees consistency
	with the case when some text of valid words is appended to the string.

2009-06-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/brk-maximal.c (brk_maximal_do_impl): Set str_pos for cases
	that fail at string end back to the last progress position, to prevent
	it from wrongly winning the contest over some good candidates.

2009-06-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/tkbrk/brk-maximal.c (RECOVERED_WORDS): Increase recovery
	threshold, 2 is too few and can trigger wrong recovery position too
	easily.

2009-06-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/Makefile.am, +data/tdict-lang-ethnic.txt: Add a new category.
	* data/tdict-{common,geo}.txt, data/tdict-lang-ethnic.txt:
	Move some words to the new category.
	* data/tdict-{lang-ethnic,ict,spell,proper,common,science,geo}.txt:
	Add words.
	* data/tdict-std.txt: Remove a duplicated compound.

2009-06-13  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/brk-maximal.c (best_brk_contest): Compare penalties with
	'<=' like in previous code, instead of '<', to retain longest-matching
	effect in case of equal scores.

2009-06-10  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-std-compound.txt: Remove loose compounds.
	* data/tdict-{common,proper}.txt: Move a proper noun to tdict-proper.
	* data/tdict-{ict,spell,district,proper,common,science,geo}.txt:
	Add words.

2009-06-10  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/brk-maximal.c (brk_maximal_do_impl, best_brk_contest): 
	Use weighted scoring, rather than parameters prioritization, to choose
	better solution.
